--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,8 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-
   background-color: black;
 }
 
@@ -18,7 +17,7 @@ body {
 }
 
 .output_canvas {
-  transform: rotateY(180deg) scale(1.35);
+  /* transform: rotateY(180deg) scale(1.35); */
 }
 
 .intro_acces {
@@ -39,4 +38,34 @@ body {
   height: 10%;
   font-size: 1rem;
   color: black;
+}
+
+.process_video {
+  width: 100%;
+  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.process_image {
+  display: flex;
+  background-color: blue;
+  width: 50%;
+  justify-content: center;
+  flex-direction: column;
+}
+
+@
+
+.process_image_top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.process_image_bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
