--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 
 .output_canvas {
   /* transform: rotateY(180deg) scale(1.35); */
-  /* transform: rotateY(180deg); */
+  transform: rotateY(180deg);
 }
 
 .image_output {
