--- a/client/css/style.css
+++ b/client/css/style.css
@@ -15,11 +15,16 @@ body {
   overflow: hidden;
   position: fixed;
   background-color: black;
+  font-family: BananaGrotesk;
 }
 
 button {
   font-family: BananaGrotesk;
   text-transform: uppercase;
+  touch-action: manipulation;
+  -webkit-touch-callout: none;
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 .container {
@@ -63,7 +68,10 @@ button {
   font-size: 1.2rem;
   color: white;
   font-family: BananaGrotesk;
-  text-transform: uppercase;
+}
+
+.headerTitle {
+  transition: transform 0.2s ease-out;
 }
 
 /* INTRO */
@@ -71,7 +79,7 @@ button {
 .intro {
   width: 100%;
   height: 100%;
-  background-color: red;
+  background-color: black;
 }
 
 .intro_content {
@@ -81,19 +89,61 @@ button {
   justify-content: center;
   align-items: center;
   background-color: blue;
-  height: 100%;
-  width: 100%;
+  height: calc(100% - 80px);
+  width: calc(100% - 40px);
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 60px;
+  left: 20px;
   z-index: 2000;
+  color: white;
 }
 
-.intro_content button {
-  width: 50%;
-  height: 10%;
+.intro_part {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  gap: 15px;
+}
+
+.intro_part_title {
+  font-size: 4rem;
+  color: white;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  transition: transform 0.1s ease-out;
+}
+
+.intro_part_number {
   font-size: 1rem;
-  color: black;
+  color: white;
+  width: 10%;
+}
+
+.intro_part_text {
+  font-size: 1rem;
+  color: white;
+  width: 90%;
+}
+
+.intro_buttons {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+}
+
+.intro_button {
+  width: 100%;
+  height: 20px;
+  border-radius: 100px;
+  background-color: black;
+  border: 1px solid white;
+  color: white;
 }
 
 /* MODE 1 VIDEO */
@@ -106,7 +156,7 @@ button {
 
   position: relative; /* Ajouté */
   overflow: hidden; /* Ajouté */
-  border-radius: 25px;
+  border-radius: 25px 25px 25px 25px;
 }
 
 .canvas_container {
